# scr-top

./: .gitignore  CMakeLists.txt  Makefile  README.md  git-all  spack-release.sh
.github/workflows/: build-and-test.yml  build-by-spack.yaml
cmake/: config.h.in
