PROJECT(SCR_TOP)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# force debug flags to be "-g -O0" instead of "-g"
SET(CMAKE_C_FLAGS_DEBUG   "-g -O0")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -O0")

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/install CACHE PATH "" FORCE)
  MESSAGE(WARNING "Install path is not set! Defaulting to ${CMAKE_INSTALL_PREFIX}")
ENDIF()

INCLUDE(ExternalProject)

EXTERNALPROJECT_ADD(kvtree
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/kvtree
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG} -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG})
SET(WITH_KVTREE_PREFIX ${CMAKE_INSTALL_PATH} CACHE PATH "")

EXTERNALPROJECT_ADD(rankstr
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/rankstr
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG} -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG})
SET(WITH_RANKSTR_PREFIX ${CMAKE_INSTALL_PREFIX} CACHE PATH "")

EXTERNALPROJECT_ADD(spath
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/spath
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG} -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG})
SET(WITH_SPATH_PREFIX ${CMAKE_INSTALL_PREFIX} CACHE PATH "")

EXTERNALPROJECT_ADD(axl
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/axl
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG} -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG})
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(axl install kvtree)
SET(WITH_AXL_PREFIX ${CMAKE_INSTALL_PREFIX} CACHE PATH "")

EXTERNALPROJECT_ADD(shuffile
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/shuffile
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG} -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG})
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(shuffile build kvtree)
SET(WITH_SHUFFILE_PREFIX ${CMAKE_INSTALL_PREFIX} CACHE PATH "")

EXTERNALPROJECT_ADD(redset
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/redset
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG} -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG})
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(redset build kvtree)
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(redset build rankstr)
SET(WITH_REDSET_PREFIX ${CMAKE_INSTALL_PREFIX} CACHE PATH "")

EXTERNALPROJECT_ADD(er
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/er
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG} -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG})
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(er build kvtree)
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(er build shuffile)
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(er build redset)
SET(WITH_ER_PREFIX ${CMAKE_INSTALL_PREFIX} CACHE PATH "")

# TODO:
# figure out correct way to pass ${CMAKE_CFLAGS} to configure line
# empty CFLAGS causes error

EXTERNALPROJECT_ADD(lwgrp
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lwgrp
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
  BUILD_IN_SOURCE 1
  CONFIGURE_COMMAND ./autogen.sh && ./configure --prefix=${CMAKE_INSTALL_PREFIX})
SET(WITH_LWGRP_PREFIX ${CMAKE_INSTALL_PREFIX} CACHE PATH "")

EXTERNALPROJECT_ADD(dtcmp
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dtcmp
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
  BUILD_IN_SOURCE 1
  CONFIGURE_COMMAND ./autogen.sh && ./configure --prefix=${CMAKE_INSTALL_PREFIX} --with-lwgrp=${WITH_LWGRP_PREFIX})
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(dtcmp build lwgrp)
SET(WITH_DTCMP_PREFIX ${CMAKE_INSTALL_PREFIX} CACHE PATH "")

EXTERNALPROJECT_ADD(scr
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/scr
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG} -DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG})
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(scr build kvtree)
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(scr build rankstr)
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(scr build spath)
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(scr build er)
EXTERNALPROJECT_ADD_STEPDEPENDENCIES(scr build dtcmp)
SET(WITH_SCR_PREFIX ${CMAKE_INSTALL_PREFIX}/scr CACHE PATH "")

# some projects require a "make install" command to work,
# so define at least a basic INSTALL function
INSTALL(FILE NOTICE DESTINATION share/scr)
